# education-assistant

./: .gitignore  Makefile  README.md  app.py  requirements.txt
.data/: feedback.db
config/: pyproject.toml
docs/: ARCHITECTURE.md  README.md  USAGE.md
scripts/: content_processor.py
src/: __init__.py
src/auth/: __init__.py  auth_manager.py  user_settings.py
src/core/: __init__.py  agent.py  document_processor.py  response_generator.py  tools.py  voice_synthesizer.py
src/database/: __init__.py  database.py  database_manager.py  feedback_manager.py
src/ui/: __init__.py  admin_audit.py  auth_interface.py  database_viewer.py
src/utils/: __init__.py  audit.py  crypto.py  storage.py
tests/: conftest.py  test_agent.py  test_database_connection.py  test_tools.py
