[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.6",
    "openai>=1.63.0",
    "pandas>=2.2.3",
    "pinecone>=6.0.1",
    "pinecone-client>=5.0.1",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "pypdf2>=3.0.1",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "speechrecognition>=3.14.1",
    "streamlit>=1.42.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
]
